--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,2 +1,4 @@
 validation.notnull=El nombre no puede ser nulo
 validation.notempty=El texto no puede estar vacio
+#especialidad
+especialidad.not.found=No se encuentra la especialidad con el id solicitado
