add jwt filter & util

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -2,3 +2,5 @@ validation.notnull=El nombre no puede ser nulo
 validation.notempty=El texto no puede estar vacio
 #especialidad
 especialidad.not.found=No se encuentra la especialidad con el id solicitado
+#usuario
+usuario.not.found=No se encuentra el usuario solicitado
